--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,14 @@ services:
       - .m2:/root/.m2
     stdin_open: true
     tty: true
-
+  react:
+    build: ./ui
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./ui:/ui
+      - /ui/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
 volumes:
   db:
