--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.2",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
