Fix (fast refresh error not working)

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,9 +1,10 @@
-FROM node:22.13.1-alpine
+FROM node:22.14.0-alpine
 WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
-RUN npm install -g npm@10.2.3
+RUN npm install -g npm@10.9.2
+RUN npm audit fix
 
 COPY . .
 EXPOSE 5173
