--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      - ./ui:/ui
-      - /ui/node_modules
+      - ./ui:/app
+      - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
 volumes:
